--- a/frontend/src/styles/ChatArea.css
+++ b/frontend/src/styles/ChatArea.css
@@ -1,11 +1,10 @@
 .chat-area {
-  /* flex-grow: 1; */
   width: 90%;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  background-color: #212121;
-  color: white;
+  background-color: var(--bg-color);
+  color: var(--text-color);
   padding: 0 50px 0 50px;
 }
 
@@ -27,13 +26,18 @@
 
 .messages {
   /* flex-grow: 1; */
-  /* overflow-y: auto; */
+  overflow-y: auto;
   padding: 20px;
+  height: 80vh;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  /* Hide scrollbar for Webkit browsers */
+  &::-webkit-scrollbar {
+    display: none;
+  }
   font-size: 2.2rem;
-  margin-top: 20vh;
+  margin-top: 10vh;
   flex-direction: column;
   gap: 10px;
 }
@@ -48,7 +52,7 @@
 .chat-input {
   display: flex;
   width: 100%;
-  background-color: #333;
+  background-color: var(--input-bg);
   border: 1px solid #555;
   border-radius: 25px;
   padding: 5px 10px;
@@ -59,7 +63,7 @@
   flex-grow: 1;
   background: none;
   border: none;
-  color: white;
+  color: var(--input-text);
   font-size: 1rem;
   padding: 10px;
 }
@@ -71,7 +75,7 @@
 .chat-input button {
   background: none;
   border: none;
-  color: #aaa;
+  color: var(--text-color);
   cursor: pointer;
   font-size: 1.5rem;
   padding: 5px;
@@ -84,7 +88,7 @@
 }
 
 .chat-input .chat-input-btn:hover {
-  color: white;
+  color: var(--button-text);
 }
 
 /* Responsive Styles */
@@ -120,7 +124,6 @@
 
   .messages {
     font-size: 1.5rem;
-    margin-top: 15vh;
     padding: 15px;
   }
 
@@ -136,7 +139,6 @@
 @media (max-width: 480px) {
   .chat-area {
   padding: 0px 10px 2px 10px;
-    /* padding: 0 10px; */
   }
 
   .welcome-content h2 {
@@ -146,7 +148,6 @@
 
   .messages {
     font-size: 1.2rem;
-    margin-top: 40vh;
   }
 
   .chat-input-container {
