--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -1,8 +1,23 @@
 .home-container {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
   display: flex;
-  color: white;
-  background-color: black;
-  /* width: 100% */
+}
+
+.home-bg {
+  position: absolute;
+  inset: 0;
+  z-index: 0;
+}
+
+.home-content {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  width: 100%;
+  height: 100%;
 }
 
 @media (min-width: 768px) {
